--- a/css/track-info.css
+++ b/css/track-info.css
@@ -1,8 +1,13 @@
-.track__info {
-    padding: 14px 8px;
+.track-info {
+    text-align: left;
 }
 
-.track__title {
-
+.track-info__title {
+    margin-bottom: 6px;
     font-weight: 600;
+}
+
+.track-info__artist {
+    font-weight: 300;
+    font-size: 14px;
 }
