--- a/css/track.css
+++ b/css/track.css
@@ -1,13 +1,20 @@
 .track {
     padding: 6px;
-    background: transparent;
+    background-color: transparent;
     border: 2px solid transparent;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .track_active {
     border-color: #ffffff;
     background-color: rgba(255, 255, 255, 0.5);
+    transition: background-color .3s ease-in-out;
+}
+
+.track_active:hover {
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 .track__img-wrap {
@@ -27,16 +34,39 @@
     border-radius: 50%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    background-image: url("../img/Pause.svg");
+    transform: translate(-50%, -50%) rotateY(90deg);
+    background-image: url("../img/play.svg");
     background-position: center;
     background-repeat: no-repeat;
     opacity: 0;
+    transition-property: transform, opacity;
+    transition-duration: .3s;
+    transition-timing-function: ease-in-out;
 }
 
 .track_active .track__img-wrap:after {
+    transform: translate(-50%, -50%) rotateY(0);
+    background-image: url("../img/Pause.svg");
+    transition-property: background-color;
     opacity: 1;
 }
+
+.track_active:hover .track__img-wrap:after {
+   background-color: #fff;
+}
+
+.track:hover .track__img-wrap:after,
+.track:focus .track__img-wrap:after {
+    transform: translate(-50%, -50%) rotateY(0);
+    opacity: 1;
+}
+
+.track:active .track__img-wrap:after {
+    transform: translate(-50%, -50%) rotateY(0) scale(1.3);
+    opacity: 1;
+}
+
+
 
 .track__poster {
 
@@ -45,4 +75,7 @@
 .track__info {
     background-color: #ffffff;
     border-radius: 0 0 12px 12px;
+    padding: 14px 8px;
+    flex-grow: 1;
+    width: 100%;
 }
