--- a/css/player.css
+++ b/css/player.css
@@ -86,7 +86,26 @@
     height: 6px;
 }
 
+.player__progress-input::-moz-range-track {
+    background-color: #1e5a32;
+    border-radius: 20px;
+    border: none;
+    height: 6px;
+}
+
 .player__progress-input::-webkit-slider-thumb {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 12px;
+    height: 24px;
+    background: #ffffff;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
+    margin-top: -8px;
+    border: 1px solid transparent;
+}
+
+.player__progress-input::-moz-range-thumb {
     appearance: none;
     -webkit-appearance: none;
     width: 12px;
@@ -102,9 +121,17 @@
 .player__progress-input:focus::-webkit-slider-runnable-track {
     background-color: #e6a93f;
 }
+.player__progress-input:hover::-moz-range-track,
+.player__progress-input:focus::-moz-range-track {
+    background-color: #e6a93f;
+}
 
 .player__progress-input:hover::-webkit-slider-thumb,
 .player__progress-input:focus::-webkit-slider-thumb {
+    border-color: #000;
+}
+.player__progress-input:hover::-moz-range-thumb,
+.player__progress-input:focus::-moz-range-thumb {
     border-color: #000;
 }
 
@@ -146,8 +173,26 @@
     border: 1px solid transparent;
 }
 
+.player__volume-input::-moz-range-thumb {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 12px;
+    height: 24px;
+    background: #ffffff;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
+    /*margin-top: 6px;*/
+    border: 1px solid transparent;
+}
+
  .player__volume-input:hover::-webkit-slider-thumb,
  .player__volume-input:focus::-webkit-slider-thumb {
+     border-color: #000;
+ }
+
+
+ .player__volume-input:hover::-moz-range-thumb,
+ .player__volume-input:focus::-moz-range-thumb {
     border-color: #000;
 }
 
@@ -160,4 +205,99 @@
 
 .player__icon_condition_volume {
     background-image: url("../img/volume.svg");
+}
+
+@media (max-width: 1024px) {
+    .player__container {
+        grid-template-columns: 1fr 1fr 2fr 1fr;
+    }
+}
+
+@media (max-width: 968px) {
+    .player {
+        right: 34px;
+        left: 34px;
+        padding: 22px 60px;
+        border-radius: 30px;
+    }
+
+    .player_condition_active {
+        margin-bottom: 24px;
+    }
+
+    .player__container {
+        grid-template-columns: 1fr 1fr 1fr;
+        row-gap: 27px;
+    }
+
+    .player__progress-wrap {
+        order: 1;
+        grid-column: 1 / -1;
+    }
+
+    .player__progress {
+    max-width: none;
+     }
+
+    .player__controller {
+        justify-self: center;
+    }
+
+    .player__volume-wrap {
+        justify-self: end;
+    }
+}
+
+@media (max-width: 740px) {
+    .player {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
+    .player_condition_active {
+        bottom: 0;
+    }
+
+    .player_condition_active {
+        bottom: 0;
+    }
+
+    .player__container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .player__progress-wrap {
+        padding-left: 0;
+        /*padding-right: 0;*/
+    }
+
+    .player__volume-wrap {
+        display: none;
+    }
+
+    .player__controller {
+        justify-self: end;
+    }
+}
+
+@media (max-width: 560px) {
+    .player {
+        left: 0;
+        right: 0;
+        gap: 16px;
+        padding: 16px 15px;
+    }
+
+    .player__container {
+        grid-template-columns: 1fr;
+    }
+
+    .player__volume-wrap {
+        display: none;
+    }
+
+    .player__controller {
+        justify-self: center;
+        text-align: center;
+    }
 }
