--- a/css/player.css
+++ b/css/player.css
@@ -59,6 +59,10 @@
     background-image: url("../img/like.svg");
 }
 
+.player__icon_condition_like_active {
+    filter: drop-shadow(0 0 2px tomato);
+}
+
 .player__progress-wrap{
     display: flex;
     align-items: center;
@@ -199,12 +203,13 @@
 .player__icon {
 
 }
-.player__icon_condition_mute {
-    background-image: url("../img/mute.svg");
-}
 
 .player__icon_condition_volume {
     background-image: url("../img/volume.svg");
+}
+
+.player__icon_condition_mute {
+    background-image: url("../img/mute.svg");
 }
 
 @media (max-width: 1024px) {
